// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Card/Card Box Default 1`] = `
<div
  class="rpl-card-box"
>
  <!---->
   
  <div
    class="rpl-card-box__items"
  >
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Emergency Assistance
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="tel:0000"
            href="tel:0000"
          >
            <!---->
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Call 0000
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="tel:000"
            href="tel:000"
          >
            <!---->
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Call 000
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="/home"
            href="/home"
          >
            <!---->
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Internal link
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <!---->
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="http://google.com"
            href="http://google.com"
          >
            <!---->
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        External link
      
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Carousel Default 1`] = `
<div
  class="rpl-card-carousel"
>
  <!---->
   
  <h2
    class="rpl-card-carousel__title"
  >
    Featured Content
  </h2>
   
  <div
    class="rpl-card-carousel__slider"
  >
    <div
      class="VueCarousel"
    >
      <div
        class="VueCarousel-wrapper"
      >
        <div
          class="VueCarousel-inner"
          style="transform: translate(0px, 0); transition: 0.5s ease transform; flex-basis: 0px; visibility: hidden; height: auto;"
        >
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image"
                    src="https://placehold.it/580x340"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 July
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <!---->
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active VueCarousel-slide-center"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image"
                    src="https://placehold.it/580x340"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-promotion__meta"
                  >
                    <div
                      class="rpl-card-promotion__date"
                    >
                      10 July
                    </div>
                     
                    <div
                      class="rpl-card-promotion__tag"
                    >
                      News
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-promotion__title"
                  >
                    This is display copy that wraps 2 lines
                  </h2>
                   
                  <div
                    class="rpl-card-promotion__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-promotion__summary"
                    >
                      We are looking at ways to make housing more affordable and renting more secure. Tell us what works for you or find out what's happening.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      Read
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       more
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image"
                    src="https://placehold.it/580x340"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 to 15 July
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <!---->
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image"
                    src="https://placehold.it/580x340"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 July to 10 September 2018
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <!---->
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image"
                    src="https://placehold.it/580x340"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-promotion__meta"
                  >
                    <div
                      class="rpl-card-promotion__date"
                    >
                      10 July
                    </div>
                     
                    <div
                      class="rpl-card-promotion__tag"
                    >
                      News
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-promotion__title"
                  >
                    This is display copy that wraps 2 lines
                  </h2>
                   
                  <div
                    class="rpl-card-promotion__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-promotion__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor at vero eos et accusamus et iusto odio dignis.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      Read
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       more
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <!---->
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <!---->
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="rpl-card-carousel__navigation"
    >
      <button
        aria-label="Go to previous slide"
        class="rpl-card-carousel__navigation-button rpl-card-carousel__navigation-button--prev"
        disabled="disabled"
        role="button"
      >
        <!---->
      </button>
       
      <button
        aria-label="Go to next slide"
        class="rpl-card-carousel__navigation-button rpl-card-carousel__navigation-button--next"
        role="button"
      >
        <!---->
      </button>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Content (base) Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      src="https://placehold.it/580x340"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div>
      <h2>
        Custom Content
      </h2>
      <p>
        Lorem ipsum dolor sit amet.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <!---->
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Cta Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-cta rpl-card-content--no-image rpl-card-content--default"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <img
      alt=""
      class="rpl-card-cta__image"
      src="https://placehold.it/148x148"
    />
     
    <h2
      class="rpl-card-cta__title"
    >
      Want to submit an event?
    </h2>
     
    <div
      class="rpl-card-cta__trim-wrapper"
      style="max-height: none;"
    >
      <div
        class="rpl-card-cta__summary"
      >
        <p>
          Lorem ipsum dolor 
          <b>
            sit amet
          </b>
          , consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
        </p>
      </div>
    </div>
     
    <span
      class="rpl-card-cta__button"
    >
      See event details
    </span>
     
    <!---->
  </div>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Emergency Contact Default 1`] = `
<div
  class="rpl-card-emergency"
>
  <div
    class="rpl-card-emergency__content"
  >
    <div
      class="rpl-card-emergency__subtitle"
    >
      <span>
        Urgent
      </span>
    </div>
     
    <h2
      class="rpl-card-emergency__title"
    >
      Emergency Assistance
    </h2>
     
    <p
      class="rpl-card-emergency__summary"
    >
      Dial 000 for police, fire & ambulance
    </p>
  </div>
   
  <div
    class="rpl-card-emergency__cta"
  >
    <span
      class="rpl-card-emergency__separator"
    />
     
    <a
      class="rpl-link rpl-card-emergency__cta-link"
      data-print-url="tel:000"
      href="tel:000"
    >
      <!---->
       
      <span
        class="rpl-card-emergency__cta-link-text"
      >
        
        Call 000
      
      </span>
    </a>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Event Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      src="https://placehold.it/304x199"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-event__meta"
    >
      <div
        class="rpl-card-event__date"
      >
        10 to 11 July
      </div>
    </div>
     
    <h2
      class="rpl-card-event__title"
    >
      This is the headline of an event with a location that will stretch over over 3 lines
    </h2>
     
    <div
      class="rpl-card-event__trim-wrapper"
      style="max-height: none;"
    >
      <p
        class="rpl-card-event__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <p
      class="rpl-card-event__location"
    >
      <!---->
      South Yarra
    </p>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        See event
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         details
        <!---->
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Image Navigation Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-image-navigation rpl-card-content--inline rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      src="https://placehold.it/304x199"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-image-navigation__details"
    >
      <div
        class="rpl-card-image-navigation__meta"
      >
        <div
          class="rpl-card-image-navigation__date"
        >
          23 March
        </div>
         
        <div
          class="rpl-card-image-navigation__tag"
        >
          Community
        </div>
      </div>
       
      <h2
        class="rpl-card-image-navigation__title"
      >
        This heading could wrap over two lines
      </h2>
       
      <p
        class="rpl-card-image-navigation__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <div
      class="rpl-card-content__link"
    >
      <span>
        <span>
          Call to
        </span>
         
        <span
          class="rpl-text-icon__group"
        >
           action
          <!---->
        </span>
      </span>
    </div>
  </div>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Keydates Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <h2
      class="rpl-card-keydates__title"
    >
      Key calendar dates
    </h2>
     
    <div
      class="rpl-card-keydates__keydate"
    >
      <div
        class="rpl-card-keydates__keydate-date"
      >
        <!---->
         
        <span>
          3 April
        </span>
      </div>
       
      <h3
        class="rpl-card-keydates__keydate-title"
      >
        Term two starts
      </h3>
       
      <p
        class="rpl-card-keydates__keydate-description"
      >
        Its back to the classroom as school start term two on the 16th April.
      </p>
    </div>
    <div
      class="rpl-card-keydates__keydate"
    >
      <div
        class="rpl-card-keydates__keydate-date"
      >
        <!---->
         
        <span>
          23 April
        </span>
      </div>
       
      <h3
        class="rpl-card-keydates__keydate-title"
      >
        ANZAC Day
      </h3>
       
      <p
        class="rpl-card-keydates__keydate-description"
      >
        National day of remembrance to commemorate the ANZACs.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <!---->
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-navigation rpl-card-content--no-image rpl-card-content--simple rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <h2
      class="rpl-card-navigation__title rpl-card-navigation__title--with-summary"
    >
      First navigation card
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <!---->
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation Featured Default 1`] = `
<a
  class="rpl-link rpl-card-navigation-featured"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-navigation-featured__inner"
  >
    <img
      alt=""
      class="rpl-card-navigation-featured__image"
      src="https://placehold.it/818x497"
    />
     
    <div
      class="rpl-card-navigation-featured__meta_and_title rpl-card-navigation-featured__meta_and_title--image rpl-card-navigation-featured__meta_and_title--summary"
    >
      <div
        class="rpl-card-navigation-featured__meta"
      >
        <span
          class="rpl-card-navigation-featured__date"
        >
          23 March
        </span>
         
        <span
          class="rpl-card-navigation-featured__tag"
        >
          Community
        </span>
      </div>
       
      <h2
        class="rpl-card-navigation-featured__title"
      >
        <span>
          This is display copy that wraps 2 lines
        </span>
      </h2>
    </div>
  </div>
   
  <p
    class="rpl-card-navigation-featured__summary rpl-card-navigation-featured__summary--image"
  >
    We are looking at ways to make housing more affordable and renting more secure. Tell us what works for you or find out what's happening.
  </p>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Profile Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-profile rpl-card-content--no-image rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-profile__inner"
    >
      <img
        alt=""
        class="rpl-card-profile__image"
        src="https://placehold.it/148x148"
      />
       
      <h2
        class="rpl-card-profile__name rpl-card-profile__name--no-margin"
      >
        Stella Young
      </h2>
       
      <p
        class="rpl-card-profile__lifespan"
      >
        (1982 - 2014)
      </p>
       
      <p
        class="rpl-card-profile__induction"
      >
        <span>
          Inducted
        </span>
         
        <span>
          2017
        </span>
      </p>
       
      <p
        class="rpl-card-profile__summary"
      >
        Journalist, comedian, feminist and fierce disability activist.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read Stella's
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         profile
        <!---->
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image"
      src="https://placehold.it/304x199"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-promotion__meta"
    >
      <div
        class="rpl-card-promotion__date"
      >
        23 March
      </div>
       
      <div
        class="rpl-card-promotion__tag"
      >
        News
      </div>
    </div>
     
    <h2
      class="rpl-card-promotion__title"
    >
      This is display copy that wraps 2 lines
    </h2>
     
    <div
      class="rpl-card-promotion__trim-wrapper"
      style="max-height: none;"
    >
      <p
        class="rpl-card-promotion__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <!---->
      </span>
    </span>
  </div>
</a>
`;
